<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".bmi_input">

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_circle_orange"
        android:contentDescription="@string/cd_icon_person"
        android:padding="24dp"
        android:src="@drawable/ic_hearth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="24dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/imgPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="374dp"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- SPACER -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Jenis Kelamin -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Jenis Kelamin">

                <AutoCompleteTextView
                    android:id="@+id/editGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- SPACER -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <!-- TINGGI BADAN -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tinggi Badan (cm)">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:text="170" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- SPACER -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- BERAT BADAN -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Berat Badan (kg)">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="65" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- SPACER -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <!-- BUTTON HITUNG -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonHitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="HITUNG SEKARANG"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/orange_main"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- TEKS BAWAH -->
    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="BMI membantu memantau kesehatan Anda."
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/cardForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_arrow_circle_left_24"
        app:tint="@color/orange_main"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
